# siniestros_viales_misiones

./: README.md  pyproject.toml  scrapy.cfg
.github/workflows/: github-actions.yml
results/: primera_edicion_siniestros_viales_2024.csv
scraping_siniestros_viales/: items.py  middlewares.py  pipelines.py  settings.py
scraping_siniestros_viales/spiders/: primera_edicion.py
