[tool.poetry]
name = "siniestro-scrapy"
version = "0.1.0"
description = "Raspaje de datos de siniestros viales a partir de reportajes periodísticos."
authors = ["Felipe Sodré <felipe.b4rros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
scrapy-fake-useragent = "^1.4.4"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.1"
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-ruff = "^0.1.1"
pytest-isort = "^3.1.0"
pytest-black-ng = "^0.4.1"

[tool.pytest.ini_options]
addopts = "--black --isort --ruff"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
